# iac

./: .gitignore  .prettierignore  LICENSE  README.md  Taskfile.yaml  package-lock.json  package.json
.github/workflows/: check-pr.yaml
.scripts/: README.md  Taskfile.yaml  pyproject.toml
.scripts/bash/: environment_activate
.scripts/secrets/: .env.example  local.yaml
.scripts/shims/: README.md  Taskfile.yaml
.scripts/shims/terraform/: Taskfile.yaml
.scripts/shims/terragrunt/: Taskfile.yaml  terragrunt.hcl
.scripts/shims/tflint/: Taskfile.yaml  tflint.hcl
src/: terragrunt.hcl
src/environments/github/: environment.tfvars
src/environments/github/000_yc_folder/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terragrunt.hcl  variables.tf
src/environments/github/docker-contrib/: backend.tf  main.tf  terragrunt.hcl  variables.tf
src/environments/github/docker-mirror/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
src/environments/github/iac/: .terraform.lock.hcl  backend.tf  main.tf  terragrunt.hcl  variables.tf
src/environments/tfstate/: environment.tfvars
src/environments/tfstate/000_tfstate/: backend.tf  main.tf  outputs.tf  terragrunt.hcl  terragrunt_local.hcl
src/modules/github_repository/v1/: main.tf  providers.tf  variables.tf
src/modules/github_repository_secrets/v1/: main.tf  variables.tf
src/modules/yc_ci_sa/v1/: main.tf  outputs.tf  providers.tf  variables.tf
src/modules/yc_tfstate/v1/: main.tf  outputs.tf  providers.tf  service_account.tf  variables.tf
